[gd_scene load_steps=12 format=4 uid="uid://bjh5pyapcx7g"]

[ext_resource type="Texture2D" uid="uid://cyith0l7vpfuc" path="res://assets/images/Background/Green.png" id="1_dd0lh"]
[ext_resource type="Texture2D" uid="uid://cshe66kbh8bhe" path="res://assets/images/Tilemap/Terrain (16x16).png" id="1_x6ivy"]
[ext_resource type="PackedScene" uid="uid://pbmoqjvodepq" path="res://scenes/player.tscn" id="2_4tcl0"]
[ext_resource type="PackedScene" uid="uid://br3vpue4saaom" path="res://scenes/enemy_snail.tscn" id="4_bfxgj"]
[ext_resource type="Script" uid="uid://byh07hp61qgo6" path="res://scripts/snail_wall_collision.gd" id="5_dywbp"]
[ext_resource type="PackedScene" uid="uid://kbge01jgqqfn" path="res://scenes/apple.tscn" id="6_1seuy"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ypoqj"]
texture = ExtResource("1_x6ivy")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
20:4/0 = 0
21:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
17:5/0 = 0
18:5/0 = 0
19:5/0 = 0
20:5/0 = 0
21:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
17:6/0 = 0
18:6/0 = 0
19:6/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
6:8/0 = 0
6:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:8/0 = 0
7:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:8/0 = 0
8:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:8/0 = 0
10:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
17:8/0 = 0
18:8/0 = 0
19:8/0 = 0
20:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
6:9/0 = 0
6:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:9/0 = 0
7:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:9/0 = 0
8:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:9/0 = 0
10:9/0 = 0
12:9/0 = 0
12:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
17:9/0 = 0
18:9/0 = 0
19:9/0 = 0
20:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
6:10/0 = 0
6:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:10/0 = 0
7:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:10/0 = 0
8:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
18:10/0 = 0
19:10/0 = 0
20:10/0 = 0

[sub_resource type="TileSet" id="TileSet_w3gk0"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_ypoqj")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bfxgj"]
size = Vector2(19.666643, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dywbp"]
size = Vector2(31.999992, 21.666656)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1seuy"]
size = Vector2(16.000015, 20)

[node name="LevelRoot" type="Node2D"]
scale = Vector2(3, 3)

[node name="TextureRect" type="TextureRect" parent="."]
texture_filter = 1
offset_right = 448.0
offset_bottom = 240.0
texture = ExtResource("1_dd0lh")
stretch_mode = 1
metadata/_edit_use_anchors_ = true

[node name="TileMapLayer" type="TileMapLayer" parent="."]
visibility_layer = 3
texture_filter = 1
tile_map_data = PackedByteArray("AAACAA4AAAAHAAkAAAADAA4AAAAHAAkAAAAEAA4AAAAHAAkAAAAFAA4AAAAHAAkAAAAGAA4AAAAHAAkAAAAHAA4AAAAHAAkAAAAIAA4AAAAHAAkAAAAJAA4AAAAHAAkAAAAKAA4AAAAHAAkAAAALAA4AAAAHAAkAAAAMAA4AAAAHAAkAAAANAA4AAAAHAAkAAAAOAA4AAAAHAAkAAAAPAA4AAAAHAAkAAAAQAA4AAAAHAAkAAAARAA4AAAAHAAkAAAASAA4AAAAHAAkAAAATAA4AAAAHAAkAAAAUAA4AAAAHAAkAAAAVAA4AAAAHAAkAAAAWAA4AAAAHAAkAAAAXAA4AAAAHAAkAAAAYAA4AAAAHAAkAAAAZAA4AAAAHAAkAAAAaAA4AAAAHAAkAAAAbAA4AAAAHAAkAAAAbAA0AAAAHAAkAAAAbAAwAAAAHAAkAAAAbAAsAAAAHAAkAAAAbAAoAAAAHAAkAAAAbAAkAAAAHAAkAAAAbAAgAAAAHAAkAAAAbAAcAAAAHAAkAAAAbAAYAAAAHAAkAAAAbAAEAAAAHAAkAAAAbAAIAAAAHAAkAAAAaAAYAAAAHAAkAAAAZAAYAAAAHAAkAAAAYAAYAAAAHAAkAAAAXAAYAAAAHAAkAAAAWAAYAAAAHAAkAAAAUAAYAAAAHAAkAAAAVAAYAAAAHAAkAAAAUAAUAAAAHAAgAAAAVAAUAAAAHAAgAAAAWAAUAAAAHAAgAAAAXAAUAAAAHAAgAAAAYAAUAAAAHAAgAAAAZAAUAAAAHAAgAAAAaAAUAAAAHAAgAAAAbAAUAAAAHAAgAAAARAAcAAAAHAAgAAAAQAAcAAAAHAAgAAAAPAAcAAAAHAAgAAAAMAAkAAAAHAAgAAAALAAkAAAAHAAgAAAAPAAsAAAAHAAgAAAAQAAsAAAAHAAgAAAAPAAwAAAAHAAkAAAAPAA0AAAAHAAkAAAAQAAwAAAAHAAkAAAAQAA0AAAAHAAkAAAACAA0AAAAHAAkAAAADAA0AAAAHAAkAAAAAAA0AAAAHAAkAAAABAA0AAAAHAAkAAAAAAA4AAAAHAAkAAAABAA4AAAAHAAkAAAACAAwAAAAHAAgAAAADAAwAAAAHAAgAAAAGAAsAAAAMAAkAAAAJAAsAAAAMAAkAAAAUAAkAAAAMAAkAAAAEAAgAAAAMAAkAAAAIAAUAAAAMAAkAAAANAAMAAAAMAAkAAAAZAAAAAAAHAAkAAAAYAAAAAAAHAAkAAAAXAAAAAAAHAAkAAAAWAAAAAAAHAAkAAAAVAAAAAAAHAAkAAAAUAAAAAAAHAAkAAAATAAAAAAAHAAkAAAASAAAAAAAHAAkAAAARAAAAAAAHAAkAAAAQAAAAAAAHAAkAAAAPAAAAAAAHAAkAAAAOAAAAAAAHAAkAAAANAAAAAAAHAAkAAAAMAAAAAAAHAAkAAAALAAAAAAAHAAkAAAAKAAAAAAAHAAkAAAAJAAAAAAAHAAkAAAAIAAAAAAAHAAkAAAAHAAAAAAAHAAkAAAAGAAAAAAAHAAkAAAAFAAAAAAAHAAkAAAAEAAAAAAAHAAkAAAADAAAAAAAHAAkAAAACAAAAAAAHAAkAAAAAAAAAAAAHAAkAAAABAAAAAAAHAAkAAAAaAAAAAAAHAAkAAAAbAAAAAAAHAAkAAAABAAwAAAAHAAgAAAAAAAwAAAAHAAkAAAAAAAsAAAAHAAkAAAAAAAoAAAAHAAkAAAAAAAkAAAAHAAkAAAAAAAgAAAAHAAkAAAAAAAcAAAAHAAkAAAAAAAYAAAAHAAkAAAAAAAUAAAAHAAkAAAAAAAQAAAAHAAkAAAAAAAMAAAAHAAkAAAAAAAIAAAAHAAkAAAAAAAEAAAAHAAkAAAA=")
tile_set = SubResource("TileSet_w3gk0")

[node name="Player" parent="." instance=ExtResource("2_4tcl0")]
position = Vector2(45.33333, 173.33334)
scale = Vector2(1, 1)

[node name="Enemies" type="Node2D" parent="."]

[node name="EnemySnail" parent="Enemies" instance=ExtResource("4_bfxgj")]
position = Vector2(373, 199.66666)
collision_layer = 3
collision_mask = 3

[node name="EnemySnail2" parent="Enemies" instance=ExtResource("4_bfxgj")]
position = Vector2(200, 200)
collision_layer = 3
collision_mask = 3

[node name="SnailWallCollision" type="Node2D" parent="."]
script = ExtResource("5_dywbp")

[node name="Level1LeftWall" type="Area2D" parent="SnailWallCollision"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="SnailWallCollision/Level1LeftWall"]
position = Vector2(54.16668, 213.33334)
shape = SubResource("RectangleShape2D_bfxgj")

[node name="Level1CenterPillar" type="Area2D" parent="SnailWallCollision"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="SnailWallCollision/Level1CenterPillar"]
position = Vector2(256, 213.16667)
shape = SubResource("RectangleShape2D_dywbp")

[node name="Level1RightWall" type="Area2D" parent="SnailWallCollision"]
position = Vector2(194.66667, 0)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="SnailWallCollision/Level1RightWall"]
position = Vector2(245.33333, 213.33334)
shape = SubResource("RectangleShape2D_1seuy")

[node name="Collectibles" type="Node2D" parent="."]

[node name="Apple" parent="Collectibles" instance=ExtResource("6_1seuy")]
position = Vector2(136, 69.33333)
scale = Vector2(0.5, 0.5)

[node name="Apple2" parent="Collectibles" instance=ExtResource("6_1seuy")]
position = Vector2(328, 133.33334)
scale = Vector2(0.5, 0.5)

[node name="Apple3" parent="Collectibles" instance=ExtResource("6_1seuy")]
position = Vector2(421.33334, 213.33333)
scale = Vector2(0.5, 0.5)

[connection signal="area_entered" from="SnailWallCollision/Level1LeftWall" to="SnailWallCollision" method="_on_level_1_left_wall_area_entered"]
[connection signal="area_entered" from="SnailWallCollision/Level1CenterPillar" to="SnailWallCollision" method="_on_level_1_center_pillar_area_entered"]
[connection signal="area_entered" from="SnailWallCollision/Level1RightWall" to="SnailWallCollision" method="_on_level_1_right_wall_area_entered"]
